# solana-donation-platform

./: Anchor.toml  README.md  package-lock.json  package.json
programs/solana-donation-platform/: Cargo.toml
programs/solana-donation-platform/src/: lib.rs
